300/examples/http-routing/envoy.yaml
# HTTP routing: host-based and path-based routing to two backends

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service_a
                      domains: ["service-a.local", "service-a.local:*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_a
                    - name: service_b
                      domains: ["service-b.local", "service-b.local:*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_b
                    - name: default_with_path_routing
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/a/"
                          route:
                            cluster: service_a
                        - match:
                            prefix: "/api/b/"
                          route:
                            cluster: service_b
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 404
                            body:
                              inline_string: "No route found\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: service_a
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: service_a
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-a
                      port_value: 8080

    - name: service_b
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: service_b
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: service-b
                      port_value: 8080

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
